--- a/public/examples/responsive.html
+++ b/public/examples/responsive.html
@@ -8,7 +8,7 @@
 <body class="h-80 flex items-center">
 <div class="p-6 max-w-full">
     <div class="flex flex-col min-[420px]:flex-row items-center gap-8 border-2 rounded-lg p-4 bg-white shadow-xl">
-        <img src="../images/lake.png" class="min-[500px]:h-40 h-28 rounded-lg" />
+        <img src="../lake.png" class="min-[500px]:h-40 h-28 rounded-lg" />
         <p>A lake is a body of water that is surrounded by land. There are millions of lakes in the world.</p>
     </div>
 </div>
